# coral

./: .gitignore  CMakeLists.txt  README.md  complex_demo.py  fft_demo.py  fft_model.py  interpeter.py  main.py  minimal.cc  model.py  radio.py  test.py
coral/: __init__.py  complex.py  fft.py  interpeter.py  model.py
demos/: README.md  complex_demo.py  fft_demo.py
include/coral/: buffer.h  interpreter.h  rtlsdr.h
scripts/: basic_model.py  fft_model.py  minimum_model.py  run_tests.sh  test.py
src/: buffer.cpp  interpreter.cpp  main.cpp  rtlsdr.cpp
